--- a/data-agent-management/src/main/resources/application.yml
+++ b/data-agent-management/src/main/resources/application.yml
@@ -4,9 +4,9 @@ server:
 # 存储 DataAgent 业务数据的数据库，并非Agent分析数据的来源
 spring:
   datasource:
-    url: ${DATA_AGENT_DATASOURCE_URL:jdbc:mysql://127.0.0.1:3306/saa_data_agent?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true&allowMultiQueries=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Shanghai}
+    url: ${DATA_AGENT_DATASOURCE_URL:jdbc:mysql://127.0.0.1:3306/data_agent?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true&allowMultiQueries=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Shanghai}
     username: ${DATA_AGENT_DATASOURCE_USERNAME:root}
-    password: ${DATA_AGENT_DATASOURCE_PASSWORD:root}
+    password: ${DATA_AGENT_DATASOURCE_PASSWORD:123456}
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
   sql:
@@ -19,18 +19,32 @@ spring:
       encoding: utf-8
   ai:
     vectorstore:
-      type: simple
+      type: milvus
+      milvus:
+        database-name: MyAgent
+        collection-name: my_vector_store
+        client:
+          host: 192.168.232.128
 
-    dashscope:
-      api-key: ${AI_DASHSCOPE_API_KEY}
+
+    mcp:
+      server:
+        enabled: true
+        transport: sse
+#        sse-endpoint: /mcp/message
+#        sse:
+#          path: /mcp/message
+#    ollama:
+#      base-url: http://192.168.100.210:11434
+#      chat:
+#        model: qwen2.5:32b
+#      embedding:
+#        model: qwen2.5:32b
+    openai:
       chat:
-        enabled: true
+        base-url: http://192.168.100.210:11434
         options:
-          model: qwen-plus
-      embedding:
-        enabled: true
-        options:
-          model: text-embedding-v4
+          model: qwen2.5:32b
     alibaba:
       data-agent:
         llm-service-type: stream
